@@ -83,7 +83,11 @@ class Smarty_Internal_Compile_Smarty extends Smarty_Internal_CompileBase {
             case 'global':
                 return "\$_smarty_tpl->smarty->getGlobalVariable($_index[1])->value";
             case 'block':
-               return "'".addcslashes($compiler->template->block_data[trim($_index[1],"'")]['source'],"'")."'";
+                if ($_index[2] == '\'parent\'') {
+                    return "'" . addcslashes($compiler->template->block_data[trim($_index[1], "'")]['source'], "'") . "'";
+                } else {
+                    return "''";
+                } 
             case 'ldelim':
                 $_ldelim = $this->smarty->left_delimiter;
                 return "'$_ldelim'";
@@ -97,8 +101,8 @@ class Smarty_Internal_Compile_Smarty extends Smarty_Internal_CompileBase {
                 break;
         } 
         if (isset($_index[1])) {
-           $compiled_ref = $compiled_ref . "[$_index[1]]";
-           }
+            $compiled_ref = $compiled_ref . "[$_index[1]]";
+        } 
         return $compiled_ref;
     } 
 } 
